--- a/Modelling for Kickstarter Predictions.ipynb
+++ b/Modelling for Kickstarter Predictions.ipynb
@@ -1,26 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "2128df8c-a265-4cbb-8f12-cf5dd32100f8",
+   "cell_type": "markdown",
+   "id": "cf414132-18a0-4161-b0ef-e4bd7adf56b9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#In recent years, the range of funding options for projects created by individuals and\n",
-    "#small companies has expanded considerably. In addition to savings, bank loans, friends\n",
-    "#& family funding and other traditional options, crowdfunding has become a popular and\n",
-    "#readily available alternative.\n",
-    "#Kickstarter, founded in 2009, is one particularly well-known and popular crowdfunding\n",
-    "#platform. It has an all-or-nothing funding model, whereby a project is only funded if it\n",
-    "#meets its goal amount; otherwise no money is given by backers to a project.\n",
-    "#A huge variety of factors contribute to the success or failure of a project — in general,\n",
-    "#and also on Kickstarter. Some of these are able to be quantified or categorized, which\n",
-    "#allows for the construction of a model to attempt to predict whether a project will\n",
-    "#succeed or not. The aim of this project is to construct such a model and also to analyze\n",
-    "#Kickstarter project data more generally, in order to help potential project creators\n",
-    "#assess whether or not Kickstarter is a good funding option for them, and what their\n",
-    "#chances of success are"
+    "## Description \n",
+    "\n",
+    "In recent years, the range of funding options for projects created by individuals and\n",
+    "small companies has expanded considerably. In addition to savings, bank loans, friends\n",
+    "& family funding and other traditional options, crowdfunding has become a popular and\n",
+    "readily available alternative.\n",
+    "Kickstarter, founded in 2009, is one particularly well-known and popular crowdfunding\n",
+    "platform. It has an all-or-nothing funding model, whereby a project is only funded if it\n",
+    "meets its goal amount; otherwise no money is given by backers to a project.\n",
+    "A huge variety of factors contribute to the success or failure of a project — in general,\n",
+    "and also on Kickstarter. Some of these are able to be quantified or categorized, which\n",
+    "allows for the construction of a model to attempt to predict whether a project will\n",
+    "succeed or not. The aim of this project is to construct such a model and also to analyze\n",
+    "Kickstarter project data more generally, in order to help potential project creators\n",
+    "assess whether or not Kickstarter is a good funding option for them, and what their\n",
+    "chances of success are. \n",
+    "Source of Data Set: Kaggle"
    ]
   },
   {
@@ -30,7 +31,7 @@
     "tags": []
    },
    "source": [
-    "# Importing Modules"
+    "### Importing Modules"
    ]
   },
   {
@@ -87,7 +88,7 @@
    "id": "fc1227a9-88a3-47d5-97d6-e6ef5cbef247",
    "metadata": {},
    "source": [
-    "# EDA "
+    "### EDA "
    ]
   },
   {
@@ -97,7 +98,7 @@
     "tags": []
    },
    "source": [
-    "## Exploring Data "
+    "#### Exploring Data "
    ]
   },
   {
@@ -285,13 +286,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "d2fce303-5552-49f7-918d-eb3b13ad2278",
+   "cell_type": "markdown",
+   "id": "fe24e05f-17f6-4438-b112-7e48dff2a521",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#to predict what type of kickstarter projects succeed and why ? "
+    "To predict what type of kickstarter projects succeed and why ? "
    ]
   },
   {
@@ -617,13 +616,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "87a7d97f-5c9e-4d32-b51e-df9f30a84398",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Here we calculate how many days was the project live \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlive_days\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m (\u001b[43mdf\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDeadline\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m-\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLaunched\u001b[39m\u001b[38;5;124m'\u001b[39m])\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39mdays\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "# Here we calculate how many days was the project live \n",
     "df['live_days'] = (df['Deadline'] - df['Launched']).dt.days"
    ]
   },
@@ -789,6 +801,7 @@
     }
    ],
    "source": [
+    "# We see the correlation between different features\n",
     "corr_matrix = df[['Goal', 'Pledged', 'Backers', 'live_days']].corr()\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt=\".2f\", linewidths=.5)\n",
@@ -980,7 +993,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#removing the \"Live\" and \"suspended\" rows just to keep the data clean"
+    "#removing the \"Live\" and \"suspended\" rows to keep the data clean"
    ]
   },
   {
@@ -1270,7 +1283,7 @@
    "id": "782a2687-bfe1-4e8a-8a81-e6f84c0e7198",
    "metadata": {},
    "source": [
-    "## BaseLine Model"
+    "### BaseLine Model"
    ]
   },
   {
@@ -1423,7 +1436,7 @@
    "id": "8bbc4801-9944-43dc-9882-d1a4a6fafa0e",
    "metadata": {},
    "source": [
-    "## Pre-Processing Data"
+    "### Pre-Processing Data"
    ]
   },
   {
@@ -1487,7 +1500,7 @@
    "id": "4b102795-575b-4093-8d2f-7819dcece4aa",
    "metadata": {},
    "source": [
-    "# Classifier Models"
+    "## Classifier Models"
    ]
   },
   {
@@ -1495,7 +1508,7 @@
    "id": "cc3e3ee6-605d-446c-ba79-ac1ab3e27b6f",
    "metadata": {},
    "source": [
-    "## Log-Reg Model"
+    "### Log-Reg Model"
    ]
   },
   {
@@ -1610,7 +1623,7 @@
    "id": "45c122b9-8ca0-49bf-8c2a-5c8b4b178e57",
    "metadata": {},
    "source": [
-    "## Random Forest"
+    "### Random Forest"
    ]
   },
   {
@@ -1800,7 +1813,7 @@
     "tags": []
    },
    "source": [
-    "## KNN Classifier "
+    "### KNN Classifier "
    ]
   },
   {
@@ -1975,7 +1988,7 @@
    "id": "8f622e81-c338-4b69-88b1-78519bf0981c",
    "metadata": {},
    "source": [
-    "## XG Boost"
+    "### XG Boost"
    ]
   },
   {
@@ -2454,7 +2467,7 @@
    "id": "07f6e8b1-22c9-4623-b2ee-f6802aff7a34",
    "metadata": {},
    "source": [
-    "## Balanced RandomForest"
+    "### Balanced RandomForest"
    ]
   },
   {
